# EngineCoreSuper

./: CMakeLists.txt  Doxyfile  README.md  install.sh  uninstall.sh
.github/workflows/: merge-master.yml  test-linux.yml
include/: EngineCoreSuper.hpp
include/Components/: Components.hpp  Drawable.hpp  Position.hpp  Writable.hpp
include/EngineCoreSuper/: EngineCoreSuper.hpp  Registry.hpp  SceneManager.hpp  SuperInput.hpp  TextureManager.hpp
include/EngineCoreSuper/Components/: CircleCollider.hpp  Drawable.hpp  Music.hpp  ParticleEmitter.hpp  RectCollider.hpp  Sound.hpp  SuperComponents.hpp  Velocity.hpp  Writable.hpp
include/EngineCoreSuper/Systems/: AudioSystems.hpp  GraphicSystems.hpp  PhysicSystems.hpp
include/Registry/: RegistryManager.hpp
include/Systems/: AudioSystems.hpp  GraphicSystems.hpp  PhysicSystems.hpp  SuperSystems.hpp
src/: IScene.hpp  Registry.hpp  RegistryManager.hpp  SceneManager.cpp  SuperInput.cpp  SuperInput.hpp  TextureManager.cpp  TextureManager.hpp
src/Components/: Drawable.hpp  ParticleEmitter.cpp  ParticleEmitter.hpp  Position.hpp  RigidBody.hpp  SphereCollider.hpp  SuperComponents.hpp  Velocity.hpp  Writable.hpp
src/Systems/: AudioSystems.cpp  AudioSystems.hpp  GraphicSystems.cpp  GraphicSystems.hpp  PhysicSystems.cpp  PhysicSystems.hpp  Systems.hpp
test/: CMakeLists.txt  a.out  install.sh  main.cpp  oldMain.cpp
